tests/specs/ecosystem/codehz/mtproto/0_6_1.test
codehz/mtproto/0.6.1
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Map<string, string>'.
  set(key: string, value: string): this {
  ~~~
    at file://<tmpdir>/storage/jsondb.ts:7:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Map<string, string>'.
  delete(key: string): boolean {
  ~~~~~~
    at file://<tmpdir>/storage/jsondb.ts:10:3

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Reader'.
  read_packet(reader: Deno.Reader): AsyncIterable<Uint8Array> {
                           ~~~~~~
    at file://<tmpdir>/transport/codec/abridged.ts:11:28

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Reader'.
  read_packet(reader: Deno.Reader): AsyncIterable<Uint8Array> {
                           ~~~~~~
    at file://<tmpdir>/transport/codec/full.ts:7:28

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Reader'.
  read_packet(reader: Deno.Reader): AsyncIterable<Uint8Array> {
                           ~~~~~~
    at file://<tmpdir>/transport/codec/intermediate.ts:10:28

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Reader'.
  read_packet(reader: Deno.Reader): AsyncIterable<Uint8Array> {
                           ~~~~~~
    at file://<tmpdir>/transport/codec/obfuscated.ts:15:28

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Reader'.
  read_packet(reader: Deno.Reader): AsyncIterable<Uint8Array> {
                           ~~~~~~
    at file://<tmpdir>/transport/codec/padded.ts:10:28

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Reader'.
class WebSocketWrapper implements Deno.Reader {
                                       ~~~~~~
    at file://<tmpdir>/transport/connection/websocket.ts:2:40

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Closer'.
export interface Transport extends Deno.Closer {
                                        ~~~~~~
    at file://<tmpdir>/types.ts:13:41

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Reader'.
  read_packet(reader: Deno.Reader): AsyncIterable<Uint8Array>;
                           ~~~~~~
    at file://<tmpdir>/types.ts:22:28

Found 10 errors.

